sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:8: error: Int.type does not take parameters
      ecart=Int(ecart/1.3)
               ^AlgCombSort:10: error: not found: value i
    i=0
    ^AlgCombSort:11: error: not found: value i
    while (i+ecart < lgr) {
           ^AlgCombSort:12: error: not found: value i
      if (plusPetit(i+ecart,i)){
                    ^AlgCombSort:12: error: not found: value i
      if (plusPetit(i+ecart,i)){
                            ^AlgCombSort:13: error: not found: value x
        x+=1
        ^AlgCombSort:14: error: not found: value i
        echange(i,i+ecart)
                ^AlgCombSort:14: error: not found: value i
        echange(i,i+ecart)
                  ^AlgCombSort:16: error: not found: value i
      i+=1
      ^AlgCombSort:19: error: not found: value x
    x=0
    ^